Fix nav toggle bar not showing up on mobile

--- a/src/scss/layouts/_Navigation.scss
+++ b/src/scss/layouts/_Navigation.scss
@@ -33,6 +33,7 @@
 }
 
 .nav.is-toggle {
+  display: flex;
   position: fixed;
   top: 0;
   width: 100%;
